Fix navbar width on small devices

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,8 +13,6 @@ body {
 }
 body {
   background: #f3f3f3;
-  padding-left: 5%;
-  padding-right: 5%;
 }
 
 p {
@@ -64,8 +62,16 @@ nav a:hover {
   border-width: 1.5px;
 }
 
-.content {
-  padding: 10px 0px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol {
+  padding: 0px 25px;
 }
 
 h1 {
@@ -92,5 +98,19 @@ h3 {
   h2 {
     font-weight: 100;
     font-size: 24px;
+  }
+
+  nav {
+    display: flex;
+    justify-items: center;
+    flex-direction: column;
+    align-items: flex-start;
+    text-align: center;
+    flex-grow: 0;
+    /* margin: 20px auto; */
+  }
+
+  nav > * {
+    align-self: center;
   }
 }
